# learning-note

./: .gitignore  .gitmodules  README.md
Apple/: 01-VSCode环境.md
Apple/Calc/Calc/: Calc.h  Calc.m  main.m
Apple/Calc/Calc/note/: 01-开发环境和数据类型.md  02-结构体、函数、块、类.md  02-结构体、函数、类.md
Java/: 01-base.md
Lua/: 01-base.md  01-introduce.md  02-base.md  02-table.md  Lua.md
MoonBit/: 001_hello.mbt  002_variable.mbt  003_string.mbt  004_function.mbt  005_basic_array.mbt  006_basic_tuple.mbt  007_basic_map.mbt  008_control_flows.mbt
Objective-C/Calc/Calc.xcodeproj/: project.pbxproj
Qt/: 02-logger.md  04-core-class.md  05-u盘事件.md  Qt.md
ReScript/: 02-types.md
Redis/: sds.c  sds.h
Rescript/: 01-introduce.md
ScriptLanguage/Lua/: 01-introduce.md  02-base.md
ScriptLanguage/ReScript/: 01-introduce.md
TypeScript/: 01-Types.md
cmake/: 01-introduce.md
cxx/: .clang-format  .gitignore  03-mingw64.md  04-homebrew.md  06-hash.md  CMakeLists.txt  osx.md
cxx/base/: 01-numeric.md  02-chrono.md  05-thread.md  07-span.md  08-byteorder.md  09-textencoding.md
cxx/boost_asio/: CMakeLists.txt  api_handler.h  main.cpp  router.cpp  router.h  session.cpp  session.h
cxx/boost_asio/handlers/: version_handler.cpp
cxx/boost_asio/handlers/task_manager/: interrupt_task_handler.cpp  query_task_detail_handler.cpp  query_task_result_handler.cpp  query_task_result_handler.h
cxx/design-pattern/: 04-建造者模式.md  06-适配器模式.md  08-装饰模式.md  09-外观模式.md
cxx/ftxui_example/: CMakeLists.txt
cxx/ftxui_example/component/: button.cpp  button_animated.cpp  button_style.cpp  collapsible.cpp  custom_loop.cpp  dropdown.cpp  input_in_frame.cpp  input_style.cpp
cxx/gtk_app/: CMakeLists.txt  main.cpp
cxx/make/: 01-git.md  03-autotools.md  04-Ninja.md  05-Conan.md  05-conan.md  06-vcpkg.md  07-MinGW.md
cxx/opengl_example/: CMakeLists.txt  hello_triangle.cpp  hello_triangle_index.cpp  shader.h  shader_class.cpp  shaders_interpolation.cpp  shaders_uniform.cpp  textures.cpp
cxx/opengl_example/shaders/: 3.3.shader.fs  3.3.shader.vs
cxx/platform/: dynamic_array.c  module.cpp  pipe.cpp  process.cpp  writeminidump.cc
cxx/qt/: 02-logger.md
database/sqlite/: sqlite.md
design-pattern/: 01-单例模式.md  02-工厂方法模式.md  03-抽象工厂模式.md  05-原型模式.md  07-代理模式.md
example/rust/qrencode-rs/: Cargo.toml
example/zig/zigssl/: build.zig  build.zig.zon
example/zig/zigssl/src/: aes.zig  base64.zig
example/zig/zqrencode/: build.zig  build.zig.zon
go-examples/sttr/: .gitignore  go.mod  go.sum  main.go
go-examples/sttr/cmd/: processor_asci85_decode.go  root.go  version.go
go-examples/sttr/processors/: ascii85.go  base32.go  base64.go  base64url.go  crypto.go  processor.go
go-examples/sttr/ui/: ui.go
go-examples/sttr/utils/: text.go
go/sttr/: go.mod
go/sttr/cmd/: version.go
html/: 01-html基础知识.md  03-table.md  04-form.md
html-css/: 01-html基础知识.md
make/: 01-cmake.md  01-git.md  04-cmakebuildtool.md
platform/: networkinterface.cpp  platform.md
python/: 01-介绍.ipynb
qml/: Base.qml  CMakeLists.txt  ControlModel.qml  Main.qml  MainWindow.qml  README.md  main.cpp
qt/: 03-mvd.md  04-core-class.md  05-plugin.md
rust/: 01-basevalue.rs  01-数据类型.md  02-basestruct.rs  03-basefunction.rs  04-ownership-borrowing.rs  rust.md
rust/cada2d-rs/: Cargo.toml
rust/cada2d-rs/src/: arc.rs  enums.rs  lib.rs  math_utils.rs  vec2.rs
rust/cada2d-rs/tests/: vec2_test.rs
scripts/: perl_base.pl
zig/: 01-Introduction.md  02-zigbase.zig
